--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -647,7 +647,7 @@
         <!--Settings-->
         <scene sceneID="epd-vF-FXB">
             <objects>
-                <viewController id="qED-Ai-ei9" sceneMemberID="viewController">
+                <viewController id="qED-Ai-ei9" customClass="SettingsController" customModule="StreamNScore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="v4p-kh-NJh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
