--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -267,7 +267,7 @@
                                 <rect key="frame" x="238" y="737" width="71" height="29"/>
                                 <state key="normal" title="Click Here"/>
                                 <connections>
-                                    <segue destination="hMd-Wv-6hT" kind="presentation" id="l95-Zr-mNu"/>
+                                    <segue destination="hWY-Ek-GHj" kind="presentation" id="nN6-bg-Xl7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -449,6 +449,16 @@
                                 <exclude reference="e0D-dg-GyS"/>
                                 <exclude reference="ll3-gI-pSs"/>
                                 <exclude reference="wRg-S9-ghs"/>
+                                <exclude reference="nTq-Vx-md2"/>
+                                <exclude reference="v0X-Ul-UO2"/>
+                                <exclude reference="yBf-IW-rAQ"/>
+                                <exclude reference="ysX-OI-Bxa"/>
+                                <exclude reference="6lt-TC-DIX"/>
+                                <exclude reference="E2p-h7-lmp"/>
+                                <exclude reference="ITH-J9-33J"/>
+                                <exclude reference="WRy-Vk-QS6"/>
+                                <exclude reference="f3B-OD-1nq"/>
+                                <exclude reference="puh-Ex-hWJ"/>
                                 <exclude reference="844-KT-8Dh"/>
                                 <exclude reference="B2q-oc-opb"/>
                                 <exclude reference="CDd-w3-bpw"/>
@@ -459,31 +469,12 @@
                                 <exclude reference="SUp-Ia-oKv"/>
                                 <exclude reference="fVd-RT-Ps5"/>
                                 <exclude reference="rb8-6X-JQ3"/>
-                                <exclude reference="nTq-Vx-md2"/>
-                                <exclude reference="v0X-Ul-UO2"/>
-                                <exclude reference="yBf-IW-rAQ"/>
-                                <exclude reference="ysX-OI-Bxa"/>
-                                <exclude reference="AMz-OK-mNh"/>
-                                <exclude reference="Bn1-Bw-XMe"/>
-                                <exclude reference="Qvy-vo-Rp3"/>
-                                <exclude reference="r5D-pX-nyZ"/>
-                                <exclude reference="tGk-Mp-KjC"/>
-                                <exclude reference="6lt-TC-DIX"/>
-                                <exclude reference="E2p-h7-lmp"/>
-                                <exclude reference="ITH-J9-33J"/>
-                                <exclude reference="WRy-Vk-QS6"/>
-                                <exclude reference="f3B-OD-1nq"/>
-                                <exclude reference="puh-Ex-hWJ"/>
                                 <exclude reference="JRV-Ha-Bk4"/>
                                 <exclude reference="cLX-Zx-hav"/>
                                 <exclude reference="dTd-yz-WPl"/>
                                 <exclude reference="t2Z-4S-Khi"/>
                                 <exclude reference="uK3-dn-baY"/>
                                 <exclude reference="vxX-lE-qxO"/>
-                                <exclude reference="Ka6-0u-E7D"/>
-                                <exclude reference="NQP-EF-UgD"/>
-                                <exclude reference="et2-ao-4BP"/>
-                                <exclude reference="vM1-tF-Dts"/>
                                 <exclude reference="2IP-23-IvT"/>
                                 <exclude reference="N3k-k6-MvU"/>
                                 <exclude reference="bB4-hr-FTt"/>
@@ -495,18 +486,18 @@
                                 <exclude reference="gdi-mr-mJD"/>
                                 <exclude reference="xp7-8K-Mgm"/>
                                 <exclude reference="yEt-Vj-78e"/>
-                                <exclude reference="LCw-C8-brM"/>
-                                <exclude reference="QBm-U4-wQH"/>
-                                <exclude reference="QlX-5T-IrY"/>
-                                <exclude reference="csd-gH-TF4"/>
-                                <exclude reference="fAd-J2-Po8"/>
-                                <exclude reference="tDF-gL-cQ0"/>
                                 <exclude reference="8UI-A1-uIm"/>
                                 <exclude reference="I2N-je-O9H"/>
                                 <exclude reference="K1d-wy-Enb"/>
                                 <exclude reference="K7B-dm-cNp"/>
                                 <exclude reference="pTJ-2k-gdc"/>
                                 <exclude reference="z71-Nu-lho"/>
+                                <exclude reference="LCw-C8-brM"/>
+                                <exclude reference="QBm-U4-wQH"/>
+                                <exclude reference="QlX-5T-IrY"/>
+                                <exclude reference="csd-gH-TF4"/>
+                                <exclude reference="fAd-J2-Po8"/>
+                                <exclude reference="tDF-gL-cQ0"/>
                                 <exclude reference="3de-PC-Yvq"/>
                                 <exclude reference="9PM-13-QmS"/>
                                 <exclude reference="ORM-ax-iVP"/>
@@ -524,6 +515,15 @@
                                 <exclude reference="SsA-wG-75h"/>
                                 <exclude reference="WfE-eO-49r"/>
                                 <exclude reference="p9O-uI-wnC"/>
+                                <exclude reference="AMz-OK-mNh"/>
+                                <exclude reference="Bn1-Bw-XMe"/>
+                                <exclude reference="Qvy-vo-Rp3"/>
+                                <exclude reference="r5D-pX-nyZ"/>
+                                <exclude reference="tGk-Mp-KjC"/>
+                                <exclude reference="Ka6-0u-E7D"/>
+                                <exclude reference="NQP-EF-UgD"/>
+                                <exclude reference="et2-ao-4BP"/>
+                                <exclude reference="vM1-tF-Dts"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=regular">
@@ -539,6 +539,16 @@
                                 <exclude reference="oFw-fR-NxX"/>
                                 <exclude reference="v6E-4M-2g3"/>
                                 <include reference="wRg-S9-ghs"/>
+                                <exclude reference="e02-nP-pN7"/>
+                                <exclude reference="hRL-Qx-C02"/>
+                                <include reference="nTq-Vx-md2"/>
+                                <include reference="ysX-OI-Bxa"/>
+                                <exclude reference="7yu-52-5yo"/>
+                                <exclude reference="8PR-fM-aGd"/>
+                                <include reference="E2p-h7-lmp"/>
+                                <exclude reference="HG2-2L-cMW"/>
+                                <include reference="ITH-J9-33J"/>
+                                <include reference="puh-Ex-hWJ"/>
                                 <include reference="844-KT-8Dh"/>
                                 <include reference="Ep0-h8-Ywv"/>
                                 <exclude reference="TKn-yN-kDP"/>
@@ -549,24 +559,9 @@
                                 <include reference="fVd-RT-Ps5"/>
                                 <exclude reference="ir1-1m-cs9"/>
                                 <include reference="rb8-6X-JQ3"/>
-                                <exclude reference="e02-nP-pN7"/>
-                                <exclude reference="hRL-Qx-C02"/>
-                                <include reference="nTq-Vx-md2"/>
-                                <include reference="ysX-OI-Bxa"/>
-                                <include reference="Qvy-vo-Rp3"/>
-                                <include reference="r5D-pX-nyZ"/>
-                                <include reference="tGk-Mp-KjC"/>
-                                <exclude reference="7yu-52-5yo"/>
-                                <exclude reference="8PR-fM-aGd"/>
-                                <include reference="E2p-h7-lmp"/>
-                                <exclude reference="HG2-2L-cMW"/>
-                                <include reference="ITH-J9-33J"/>
-                                <include reference="puh-Ex-hWJ"/>
                                 <include reference="JRV-Ha-Bk4"/>
                                 <include reference="cLX-Zx-hav"/>
                                 <include reference="dTd-yz-WPl"/>
-                                <include reference="NQP-EF-UgD"/>
-                                <include reference="vM1-tF-Dts"/>
                                 <include reference="2IP-23-IvT"/>
                                 <exclude reference="Cob-Cx-AK8"/>
                                 <exclude reference="LLk-sf-D67"/>
@@ -580,16 +575,16 @@
                                 <exclude reference="tvF-fk-pvT"/>
                                 <include reference="xp7-8K-Mgm"/>
                                 <include reference="yEt-Vj-78e"/>
-                                <include reference="LCw-C8-brM"/>
-                                <include reference="QlX-5T-IrY"/>
-                                <include reference="csd-gH-TF4"/>
-                                <exclude reference="k1U-t5-GpS"/>
-                                <include reference="tDF-gL-cQ0"/>
                                 <include reference="8UI-A1-uIm"/>
                                 <include reference="I2N-je-O9H"/>
                                 <exclude reference="Rsr-mV-29m"/>
                                 <exclude reference="eT3-TK-dlw"/>
                                 <include reference="z71-Nu-lho"/>
+                                <include reference="LCw-C8-brM"/>
+                                <include reference="QlX-5T-IrY"/>
+                                <include reference="csd-gH-TF4"/>
+                                <exclude reference="k1U-t5-GpS"/>
+                                <include reference="tDF-gL-cQ0"/>
                                 <include reference="9PM-13-QmS"/>
                                 <exclude reference="GNB-CR-iib"/>
                                 <exclude reference="R0C-Yr-Utc"/>
@@ -603,6 +598,11 @@
                                 <exclude reference="G0o-7e-qGQ"/>
                                 <exclude reference="Sni-EO-6Fa"/>
                                 <include reference="p9O-uI-wnC"/>
+                                <include reference="Qvy-vo-Rp3"/>
+                                <include reference="r5D-pX-nyZ"/>
+                                <include reference="tGk-Mp-KjC"/>
+                                <include reference="NQP-EF-UgD"/>
+                                <include reference="vM1-tF-Dts"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -622,6 +622,16 @@
                                 <exclude reference="jiY-Jb-Hth"/>
                                 <exclude reference="oFw-fR-NxX"/>
                                 <exclude reference="v6E-4M-2g3"/>
+                                <exclude reference="e02-nP-pN7"/>
+                                <exclude reference="hRL-Qx-C02"/>
+                                <include reference="v0X-Ul-UO2"/>
+                                <include reference="yBf-IW-rAQ"/>
+                                <include reference="6lt-TC-DIX"/>
+                                <exclude reference="7yu-52-5yo"/>
+                                <exclude reference="8PR-fM-aGd"/>
+                                <exclude reference="HG2-2L-cMW"/>
+                                <include reference="WRy-Vk-QS6"/>
+                                <include reference="f3B-OD-1nq"/>
                                 <include reference="B2q-oc-opb"/>
                                 <include reference="CDd-w3-bpw"/>
                                 <exclude reference="TKn-yN-kDP"/>
@@ -632,23 +642,9 @@
                                 <include reference="IWz-O6-916"/>
                                 <exclude reference="dkC-0r-VxA"/>
                                 <exclude reference="ir1-1m-cs9"/>
-                                <exclude reference="e02-nP-pN7"/>
-                                <exclude reference="hRL-Qx-C02"/>
-                                <include reference="v0X-Ul-UO2"/>
-                                <include reference="yBf-IW-rAQ"/>
-                                <include reference="AMz-OK-mNh"/>
-                                <include reference="Bn1-Bw-XMe"/>
-                                <include reference="6lt-TC-DIX"/>
-                                <exclude reference="7yu-52-5yo"/>
-                                <exclude reference="8PR-fM-aGd"/>
-                                <exclude reference="HG2-2L-cMW"/>
-                                <include reference="WRy-Vk-QS6"/>
-                                <include reference="f3B-OD-1nq"/>
                                 <include reference="t2Z-4S-Khi"/>
                                 <include reference="uK3-dn-baY"/>
                                 <include reference="vxX-lE-qxO"/>
-                                <include reference="Ka6-0u-E7D"/>
-                                <include reference="et2-ao-4BP"/>
                                 <exclude reference="Cob-Cx-AK8"/>
                                 <exclude reference="LLk-sf-D67"/>
                                 <include reference="bB4-hr-FTt"/>
@@ -661,14 +657,14 @@
                                 <include reference="OPo-H8-3PV"/>
                                 <include reference="PhJ-57-3PG"/>
                                 <exclude reference="tvF-fk-pvT"/>
-                                <include reference="QBm-U4-wQH"/>
-                                <include reference="fAd-J2-Po8"/>
-                                <exclude reference="k1U-t5-GpS"/>
                                 <include reference="K1d-wy-Enb"/>
                                 <include reference="K7B-dm-cNp"/>
                                 <exclude reference="Rsr-mV-29m"/>
                                 <exclude reference="eT3-TK-dlw"/>
                                 <exclude reference="pTJ-2k-gdc"/>
+                                <include reference="QBm-U4-wQH"/>
+                                <include reference="fAd-J2-Po8"/>
+                                <exclude reference="k1U-t5-GpS"/>
                                 <include reference="3de-PC-Yvq"/>
                                 <exclude reference="GNB-CR-iib"/>
                                 <include reference="ORM-ax-iVP"/>
@@ -689,6 +685,10 @@
                                 <exclude reference="5h2-hS-cgc"/>
                                 <exclude reference="G0o-7e-qGQ"/>
                                 <exclude reference="Sni-EO-6Fa"/>
+                                <include reference="AMz-OK-mNh"/>
+                                <include reference="Bn1-Bw-XMe"/>
+                                <include reference="Ka6-0u-E7D"/>
+                                <include reference="et2-ao-4BP"/>
                             </mask>
                         </variation>
                         <connections>
@@ -715,33 +715,30 @@
             </objects>
             <point key="canvasLocation" x="-14" y="121"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="C1j-Bx-JiW">
+        <!--Show Team Table Controller-->
+        <scene sceneID="iGa-x0-eMD">
             <objects>
-                <tableViewController id="hMd-Wv-6hT" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="O0Q-CC-AJi">
+                <viewController id="hWY-Ek-GHj" customClass="ShowTeamTableController" customModule="StreamNScore" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KcS-Gt-Nk4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ust-C9-r2u">
+                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="sfp-pl-CIb">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sfp-pl-CIb" id="lnR-wo-ttl">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="hMd-Wv-6hT" id="IDt-gg-ch0"/>
-                            <outlet property="delegate" destination="hMd-Wv-6hT" id="ZMu-08-z1H"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="miP-sD-GaV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <viewLayoutGuide key="safeArea" id="5Me-TY-8qA"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Ust-C9-r2u" id="aok-RU-r1A"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0a-TE-Hbf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2035" y="-673"/>
+            <point key="canvasLocation" x="-2133.3333333333335" y="-673.66071428571422"/>
         </scene>
         <!--Settings-->
         <scene sceneID="epd-vF-FXB">
