--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -818,7 +818,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="tCv-ty-whk" style="IBUITableViewCellStyleDefault" id="gUV-ZX-TvN">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="FavoriteCell" textLabel="tCv-ty-whk" style="IBUITableViewCellStyleDefault" id="gUV-ZX-TvN">
                                 <rect key="frame" x="0.0" y="72" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gUV-ZX-TvN" id="5Kb-75-YFs">
