--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -271,20 +271,20 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View All Teams: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUa-U9-hhH">
-                                <rect key="frame" x="99" y="743" width="124" height="21"/>
+                                <rect key="frame" x="99" y="694" width="124" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vTX-c3-ejS">
-                                <rect key="frame" x="237" y="739" width="71" height="29"/>
+                                <rect key="frame" x="237" y="690" width="71" height="29"/>
                                 <state key="normal" title="Click Here"/>
                                 <connections>
                                     <segue destination="hWY-Ek-GHj" kind="presentation" id="nN6-bg-Xl7"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" View Teams and Favorites:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N3w-1h-8uT" userLabel="View Teams and Views Favorites:">
-                                <rect key="frame" x="61" y="791" width="207" height="21"/>
+                                <rect key="frame" x="61" y="742" width="207" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="215" id="tQ8-zi-YTu"/>
                                 </constraints>
@@ -303,7 +303,7 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95q-lH-2is">
-                                <rect key="frame" x="276" y="787" width="77" height="29"/>
+                                <rect key="frame" x="276" y="738" width="77" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="71" id="6WT-dy-9Ks"/>
                                 </constraints>
@@ -883,7 +883,7 @@
                                 <rect key="frame" x="0.0" y="27" width="75" height="41"/>
                                 <state key="normal" title="&lt; Home"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="presentation" id="95Q-Dl-ZmE"/>
+                                    <segue destination="0fN-X0-WkX" kind="presentation" id="bJa-ZL-gAu"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1665,7 +1665,4 @@ Europa League Home Page: https://www.uefa.com/uefaeuropaleague/</string>
         <image name="SettingsTab" width="26" height="26"/>
         <image name="Title Image" width="40" height="40"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="95Q-Dl-ZmE"/>
-    </inferredMetricsTieBreakers>
 </document>
