--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Lu2-Ki-6uR"/>
                         <segue destination="MZj-dy-H11" kind="relationship" relationship="viewControllers" id="kcs-1v-Si0"/>
                         <segue destination="bLK-BR-ewX" kind="relationship" relationship="viewControllers" id="zN0-Om-p1P"/>
-                        <segue destination="qED-Ai-ei9" kind="relationship" relationship="viewControllers" id="Uo0-jl-bHT"/>
+                        <segue destination="tG5-0L-aK7" kind="relationship" relationship="viewControllers" id="T6T-P1-KpZ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dKt-93-v7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -909,36 +909,20 @@
             <point key="canvasLocation" x="-2133.3333333333335" y="-673.66071428571422"/>
         </scene>
         <!--Settings-->
-        <scene sceneID="epd-vF-FXB">
+        <scene sceneID="MHe-ZQ-vzg">
             <objects>
-                <viewController id="qED-Ai-ei9" customClass="SettingsController" customModule="StreamNScore" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="v4p-kh-NJh">
+                <viewController id="tG5-0L-aK7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WMU-RA-4VR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9j7-RR-9cb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="9j7-RR-9cb" firstAttribute="trailing" secondItem="v4p-kh-NJh" secondAttribute="trailingMargin" id="gYF-JN-4KL">
-                                <variation key="heightClass=regular-widthClass=compact" constant="20"/>
-                            </constraint>
-                            <constraint firstItem="9j7-RR-9cb" firstAttribute="leading" secondItem="v4p-kh-NJh" secondAttribute="leadingMargin" id="mYY-Mu-zSf">
-                                <variation key="heightClass=regular-widthClass=compact" constant="-20"/>
-                            </constraint>
-                            <constraint firstItem="9j7-RR-9cb" firstAttribute="top" secondItem="Vim-cS-Q7p" secondAttribute="top" id="mZ9-dt-fZ2"/>
-                            <constraint firstItem="9j7-RR-9cb" firstAttribute="bottom" secondItem="Vim-cS-Q7p" secondAttribute="bottom" id="n0C-rc-Of7"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Vim-cS-Q7p"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="9ZO-YS-BSI"/>
                     </view>
-                    <tabBarItem key="tabBarItem" enabled="NO" title="Settings" image="SettingsTab" id="Pcf-0O-qnB"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="SettingsTab" id="nVm-lb-fhM"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kXO-8n-F6t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CIF-H3-JRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1042.0289855072465" y="-672.32142857142856"/>
+            <point key="canvasLocation" x="-1042" y="-673"/>
         </scene>
         <!--Champions League Info-->
         <scene sceneID="7B9-ie-9qS">
